[gd_scene load_steps=2 format=2]

[ext_resource path="res://Assets/Scenes/UI.gd" type="Script" id=1]

[node name="GUI" type="MarginContainer"]
anchor_right = 1.0
margin_bottom = 93.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 1900.0
margin_bottom = 73.0

[node name="Bars" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 938.0
margin_bottom = 53.0
size_flags_horizontal = 3

[node name="Period" type="HBoxContainer" parent="HBoxContainer/Bars"]
margin_right = 938.0
margin_bottom = 16.0

[node name="Label" type="Label" parent="HBoxContainer/Bars/Period"]
margin_top = 1.0
margin_right = 41.0
margin_bottom = 15.0
text = "Period"
align = 1
valign = 1

[node name="HSlider" type="HSlider" parent="HBoxContainer/Bars/Period"]
margin_left = 45.0
margin_right = 938.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = 1.0
step = 0.5
value = 64.0

[node name="Persist" type="HBoxContainer" parent="HBoxContainer/Bars"]
margin_top = 20.0
margin_right = 938.0
margin_bottom = 36.0

[node name="Label" type="Label" parent="HBoxContainer/Bars/Persist"]
margin_top = 1.0
margin_right = 44.0
margin_bottom = 15.0
text = "Persist"
align = 1
valign = 1

[node name="HSlider" type="HSlider" parent="HBoxContainer/Bars/Persist"]
margin_left = 48.0
margin_right = 938.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = 0.5
step = 0.5
value = 0.5

[node name="Bars2" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 942.0
margin_right = 1880.0
margin_bottom = 53.0
size_flags_horizontal = 3

[node name="Octave" type="HBoxContainer" parent="HBoxContainer/Bars2"]
margin_right = 938.0
margin_bottom = 16.0

[node name="Label" type="Label" parent="HBoxContainer/Bars2/Octave"]
margin_top = 1.0
margin_right = 45.0
margin_bottom = 15.0
text = "Octave"
align = 1
valign = 1

[node name="HSlider" type="HSlider" parent="HBoxContainer/Bars2/Octave"]
margin_left = 49.0
margin_right = 938.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = 1.0
max_value = 9.0
value = 3.0

[node name="Lacun" type="HBoxContainer" parent="HBoxContainer/Bars2"]
margin_top = 20.0
margin_right = 938.0
margin_bottom = 36.0

[node name="Label" type="Label" parent="HBoxContainer/Bars2/Lacun"]
margin_top = 1.0
margin_right = 37.0
margin_bottom = 15.0
text = "Lacun"
align = 1
valign = 1

[node name="HSlider" type="HSlider" parent="HBoxContainer/Bars2/Lacun"]
margin_left = 41.0
margin_right = 938.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = 1.0
step = 0.5
value = 2.0

[connection signal="value_changed" from="HBoxContainer/Bars/Period/HSlider" to="." method="_on_period_slider_value_changed"]
[connection signal="value_changed" from="HBoxContainer/Bars/Persist/HSlider" to="." method="_on_persist_slider_value_changed"]
[connection signal="value_changed" from="HBoxContainer/Bars2/Octave/HSlider" to="." method="_on_octave_slider_value_changed"]
[connection signal="value_changed" from="HBoxContainer/Bars2/Lacun/HSlider" to="." method="_on_lacun_slider_value_changed"]
